--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
 node_modules
+package-lock.json
+yarn.lock
