--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.2.1",
@@ -44,7 +44,9 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
-    "mini-css-extract-plugin": "2.7.6"
+    "mini-css-extract-plugin": "2.7.6",
+    "typescript": "^5"
+
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
